ちょっと整理

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,8 @@ h6 {
 	font-display: swap;
 }
 
+
+
 /** ========================================
  * @GENERAL
  * 全般
@@ -67,127 +69,6 @@ body {
 	font-size: var(--font-l);
 }
 
-.naviButton {
-	z-index: 2;
-	appearance: none;
-	position: absolute;
-	top: 12px;
-	right: 12px;
-	width: 35px;
-	height: 26px;
-	background: none;
-	border: none;
-}
-
-.naviButton .line {
-	position: absolute;
-	display: inline-block;
-	top: 50%;
-	left: 0;
-	width: 100%;
-	height: 2px;
-	background-color: var(--color-gray);
-	transform: translateY(-50%);
-}
-.naviButton::before,
-.naviButton::after {
-	content: "";
-	position: absolute;
-	display: inline-block;
-	width: 100%;
-	height: 2px;
-	background-color: var(--color-gray);
-	transition: all .2s;
-}
-.naviButton::before {
-	top: 0;
-	left: 0;
-	transform-origin: right top;
-}
-.naviButton::after {
-	bottom: 0;
-	left: 0;
-	transform-origin: right bottom;
-}
-
-
-.naviButton[aria-expanded=true] {
-	position: fixed;
-}
-.naviButton[aria-expanded=true] .line {
-	display: none;
-}
-.naviButton[aria-expanded=true]::before {
-	transform: rotate(-45deg);
-}
-.naviButton[aria-expanded=true]::after {
-	transform: rotate(45deg);
-}
-
-
-/** ========================================
- * @GLOBAL NAVI
- * グロナビ
- * ====================================== */
-.gnavi {
-	z-index: 1;
-	position: fixed;
-	width: 64vw;
-	height: 100vh;
-	padding: 22px 32px;
-	background: #fff;
-	transition: all .2s ease-in;
-}
-
-.gnavi[aria-hidden=false] {
-	top: 0;
-	right: 0;
-	box-shadow: -2px 0 1px rgba(105,105,105, .2);
-}
-
-
-.gnavi[aria-hidden=true] {
-	top: 0;
-	right: -100%;
-}
-
-.gnavi_label {
-	font-size: var(--font-l);
-}
-
-.gnavi ul {
-	list-style: none;
-	margin: 63px 0 0;
-	padding: 0;
-	font-size: 1.125rem;
-}
-.gnavi li {
-	margin-top: 20px;
-	padding-bottom: 12px;
-	border-bottom: 1px solid var(--color-gray);
-}
-
-.gnavi a {
-	position: relative;
-	display: block;
-	text-decoration: none;
-	color: var(--color-gray);
-}
-
-.gnavi a::after {
-	content: "";
-	position: absolute;
-	display: inline-block;
-	top: 50%;
-	right: 1rem;
-	width: .75rem;
-	height: .75rem;
-	border-top: 2px solid var(--color-gray);
-	border-right: 2px solid var(--color-gray);
-	transform-origin: center;
-	transform: rotate(45deg) translateY(-50%);
-}
-
 
 
 /** ========================================
@@ -215,13 +96,19 @@ body {
 	margin: auto;
 	width: 33vw;
 	height: 33vw;
-	border: solid 4px #fff;
+	border: solid 4px var(--color-wht);
 	border-radius: 50%;
+}
+.writer_img img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
 .writer_name {
 	margin-top: 1rem;
 }
+
 
 
 /** ========================================
@@ -234,6 +121,10 @@ main {
 	padding: 0 10px;
 }
 
+
+/** --------------------
+ * セクションの見出し
+ * ------------------ */
 .section_heading {
 	padding-bottom: 7px;
 	border-bottom: 2px solid var(--color-secondly);
@@ -242,7 +133,9 @@ main {
 }
 
 
-
+/** --------------------
+ * 記事
+ * ------------------ */
 .post {
 	display: flex;
 	flex-wrap: wrap;
@@ -290,12 +183,21 @@ main {
 	font-size: var(--font-s);
 }
 
+/** --------------------
+ * ボタンのラッパー
+ * ------------------ */
 .buttonWrapper {
 	display: flex;
 	margin-top: 46px;
 	justify-content: center;
 }
 
+
+
+/** ========================================
+ * @BUTTON
+ * ボタン
+ * ====================================== */
 /**/
 .btn {
 	display: inline-block;
@@ -315,11 +217,6 @@ main {
 }
 
 
-/** ========================================
- * @BUTTON
- * ボタン
- * ====================================== */
-
 
 /** ========================================
  * @FOOTER
@@ -329,19 +226,15 @@ footer {
 	margin-top: 34px;
 	padding: 10px;
 	background: var(--color-accent);
-	color: #fff;
+	color: var(--color-wht);
 	font-size: var(--font-s);
 	text-align: center;
 }
 
 
+
 /** ========================================
- * @CONTENT
- * コンテンツ
+ * メディアクエリ参考
  * ====================================== */
-
-
 @media screen and (max-width: 640px) {
-
-
 }
