コミット忘れ

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ body {
 
 /** ========================================
  * @HERO
- * ヒーローヘッダー
+ * ヒーローヘッダー（メインビジュアル）
  * ====================================== */
 .hero {
 	position: relative;
@@ -82,6 +82,10 @@ body {
 	background-size: cover;
 }
 
+
+/** --------------------
+ * 筆者
+ * ------------------ */
 .hero_writer {
 	position: absolute;
 	bottom: 0;
@@ -182,6 +186,7 @@ main {
 	text-align: right;
 	font-size: var(--font-s);
 }
+
 
 /** --------------------
  * ボタンのラッパー
