完成版navi.cssにコメント追加

--- a/Complete/assets/css/navi.css
+++ b/Complete/assets/css/navi.css
@@ -3,6 +3,8 @@
  * File Info: ナビ用 - HTMLとCSSの講座
 */
 
+/* ▼▼▼▼▼ lesson02 ▼▼▼▼▼ */
+
 /** ========================================
  * @NAVI TOGGLE
  * ナビのトグルボタン
@@ -135,7 +137,9 @@
 	transform: translateY(-50%) rotate(45deg);
 }
 
+/* ▲▲▲▲▲ end lesson02 ▲▲▲▲▲ */
 
+/* ▼▼▼▼▼ おまけ ▼▼▼▼▼ */
 
 /** ========================================
  * メディアクエリ参考
